fix: Fix empty spacing

--- a/src/banner/banner.module.css
+++ b/src/banner/banner.module.css
@@ -62,6 +62,12 @@
     display: block;
 }
 
+/* The close button is invisible in this resolution, so we're hiding the container to prevent flex-gap from making extra space */
+.icon:empty,
+.icon:has(.closeButton:only-child) {
+    display: none;
+}
+
 .icon .closeButton {
     display: none;
 }
@@ -85,6 +91,9 @@
         width: 100%;
         align-items: center;
         justify-content: space-between;
+    }
+    .icon:has(.closeButton:only-child) {
+        display: flex;
     }
     .icon .closeButton {
         display: flex;
